--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^4.2.9",
     "material-ui-icons": "^1.0.0-beta.36",
+    "material-ui-phone-number": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
