--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^4.2.9",
+    "markdown-to-jsx": "^7.1.3",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-phone-number": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
